# Social-Game

./: CMakeLists.txt  CmakeLists.txt.in  README.md  readme.md  webgame.html
files/Games/: question.json
lib/: CMakeLists.txt
lib/game/: CMakeLists.txt
lib/game/include/: Game.h  Room.h
lib/game/src/: Game.cpp  Room.cpp
lib/json_processing/: CMakeLists.txt
lib/json_processing/include/: Builder.h  MessageParser.h  Parser.h
lib/json_processing/src/: Builder.cpp  MessageParser.cpp  Parser.cpp
lib/messaging/: CMakeLists.txt
lib/messaging/include/: Messaging.h
lib/messaging/src/: Messaging.cpp
lib/networking/include/: ConnectionMapper.h  Connections.h  Server.h
lib/networking/src/: Client.cpp  Server.cpp
lib/parser/: CMakeLists.txt
lib/parser/include/: GameParser.h  Parser.h
lib/parser/src/: GameParser.cpp  Parser.cpp
lib/room/: CMakeLists.txt
lib/room/include/: Room.h
lib/room/src/: Room.cpp
lib/room/test/: RoomTest.cpp
lib/server_engine/: CMakeLists.txt
lib/server_engine/include/: ServerEngine.h
lib/server_engine/src/: ServerEngine.cpp
lib/user/: CMakeLists.txt
lib/user/include/: User.h
lib/user/src/: User.cpp
lib/user/test/: UserTest.cpp
test/: CMakeLists.txt  ParsingTest.cpp
tools/: CMakeLists.txt
tools/gameclient/: CMakeLists.txt  gameclient.cpp
tools/gameserver/: CMakeLists.txt  gameserver.cpp
